# RAGForce

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.kiro/specs/testing-and-eval-framework/: .config.kiro  design.md  requirements.md  tasks.md
backend/: Dockerfile  pyproject.toml
backend/eval/: README.md  __init__.py  __main__.py  config.py  dataset.py  ingest.py  metrics.py  report.py  run.py
backend/eval/datasets/: __init__.py  qa_zh.jsonl
backend/eval/datasets/corpus/: .gitkeep  doc_01_rag.md  doc_02_milvus.md  doc_03_bge.md  doc_04_rrf.md  doc_05_deepseek.md
backend/eval/profiles/: __init__.py  full.py  lite.py
backend/eval/reports/: .gitkeep
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_tables.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: audit.py  chat.py  dashboard.py  documents.py  knowledge_base.py  retrieval.py  router.py
backend/src/core/: config.py  database.py  exceptions.py  logging.py
backend/src/middleware/: audit.py  metrics.py
backend/src/models/: __init__.py  audit_log.py  base.py  document.py  knowledge_base.py
backend/src/schemas/: audit.py  chat.py  dashboard.py  document.py  ingestion.py  knowledge_base.py  retrieval.py
backend/src/services/: audit_service.py
backend/src/services/generation/: deepseek_chat.py
backend/src/services/ingestion/: chunker.py  embedder.py  indexer.py  parser.py
backend/src/services/retrieval/: dense_searcher.py  fusion.py  query_rewriter.py  reranker.py  retriever.py  sparse_searcher.py
backend/src/worker/: doc_processing.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py
backend/tests/fakes/: __init__.py  deepseek.py  dense_searcher.py  embedding.py  query_rewriter.py  reranker.py  sparse_searcher.py
backend/tests/fixtures/: __init__.py  sample_files.py  seeded_kb.py
backend/tests/integration/: __init__.py  test_eval_smoke.py
backend/tests/properties/: __init__.py  strategies.py
backend/tests/unit/: __init__.py
docs/: 01_learning_path.md  02_architecture_walkthrough.md  03_testing_and_eval_deep_dive.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.tsx
frontend/src/pages/admin/: AuditLogs.tsx  Dashboard.tsx  KnowledgeBaseDetail.tsx  KnowledgeBaseList.tsx  Settings.tsx
frontend/src/pages/chat/: ChatPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
infra/: prometheus.yml
models/: Dockerfile  serve.py
